Fix info bar visibility

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -400,7 +400,7 @@
 
 .info-bar {
   position: absolute;
-  bottom: 5px;
-  left: 5px;
+  right: 5px;
+  top: 5px;
   z-index: 1;
 }
